# LabGuardian-Server

./: .env  .env.example  .gitignore  Dockerfile  README.md  demo_run.py  detect_user_images.py  docker-compose.yml  generate_demo.py  generate_proposal_heatmaps.py  mock_server.py  pyproject.toml  reference_S01.json  save_reference.py
app/: main.py
app/core/: celery_app.py  config.py  deps.py
app/domain/: board_schema.py  circuit.py  ic_models.py  netlist_models.py  polarity.py  risk.py  validator.py
app/pipeline/: orchestrator.py  topology_input.py
app/schemas/: angnt.py  aoi.py  classroom.py  kb.py  pipeline.py  version.py
app/services/: agent_service.py  classroom_state.py  guidance_service.py  kb_service.py  pipeline_service.py  rag_service.py  version_service.py
app/worker/: tasks.py
artifacts/archive/: pipeline_log.txt  run_pipeline.py  ua741_output.txt
demo_output/: netlist.txt  report.txt
detect_results/ua741_pipeline/: pipeline_result.json
docs/: backend-architecture.md  board-schema-format.md  current-status.md  validator-error-codes.md  vision-stage-contracts.md
models/unit_v1_yolov8s_960/: results.csv
scripts/manual/: README.md
tests/manual/: README.md  test_aoi_module.py  test_calibrator.py  test_http_api.py  test_multi_images.py  test_new_model.py  test_pipeline_v2.py  test_ua741_pipeline.py  test_winclip_pcb.py
tests/pipeline/: conftest.py  fixtures.py  mocks.py  test_error_handling.py  test_image_io.py  test_integration.py  test_interface.py  test_s1_detect.py  test_s1b_pin_detect.py  test_s2_mapping.py  test_s3_topology.py  (+1 more)
(+60 files in other folders)
