[project]
name = "labguardian-server"
version = "0.1.0"
description = "LabGuardian з»ҹдёҖеҗҺз«Ҝ вҖ” жЈҖжөӢвҶ’жҳ е°„вҶ’жӢ“жү‘вҶ’жЈҖй”ҷ еӣӣйҳ¶ж®ө Pipeline"
requires-python = ">=3.11"
dependencies = [
    # --- Web жЎҶжһ¶ ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    # --- ејӮжӯҘд»»еҠЎ ---
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # --- и§Ҷи§ү & AI ---
    "ultralytics>=8.2.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "networkx>=3.2",
    "scikit-image>=0.22.0",
    # --- ж•°жҚ®еә“ (йў„з•ҷ) ---
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # --- е·Ҙе…· ---
    "httpx>=0.27.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
